--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.vortega.exercise_2.app.ResultsActivity"
             android:label="@string/title_activity_results" >
+        </activity>
+        <activity
+            android:name="com.vortega.exercise_2.app.VipActivity"
+            android:label="@string/title_activity_vip" >
         </activity>
     </application>
 
